# JiraWorklogReporting

./: .coveragerc  .editorconfig  .env.example  .gitignore  README.md  TEMPLATE_config.ini  mJiraWorkLogExtractor.py  mJiraWorkLogExtractor.spec  pyproject.toml  pytest.ini  requirements.txt
.clinerules/: 01-secuurity.md  02-architecture.md  03-style.md  04-approvals.md
.github/workflows/: ci.yml  release.yml
docs/: decisions.md
jira_worklog_extractor/: __init__.py  cli.py  core.py
src/jira_worklog_extractor/: __init__.py  core.py
tests/: conftest.py  test_additional_coverage.py  test_args_and_main_verbose.py  test_core_additional.py  test_edge_cases.py  test_http_and_jira.py  test_main_branches.py  test_more_branches.py  test_more_coverage.py  test_phase1_regressions.py  test_phase3_coverage.py  test_utils.py
tests/unit/: test_core_more_coverage.py  test_main_worklogs.py  test_max_workers_config.py  test_max_workers_defaults.py
