[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "jira-worklog-extractor"
version = "0.0.0"
description = "Export Jira Cloud worklogs to Excel with robust retries, concurrency, and Windows trust support."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Maintainers", email = "maintainers@example.com" }]
license = { text = "MIT" }
keywords = ["jira", "worklogs", "excel", "reporting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "requests==2.32.3",
  "urllib3==2.2.3",
  "pandas==2.2.2",
  "python-dateutil==2.9.0.post0",
  "tqdm==4.66.5",
  "openpyxl==3.1.5",
]

[project.optional-dependencies]
# Install with: pip install .[dev]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "pyinstaller",
  "types-requests",
  "types-python-dateutil",
  # Optional Windows trust integration for builder environments:
  # "certifi-win32",
]

[project.scripts]
jira-worklog-extractor = "jira_worklog_extractor.cli:main"

[tool.ruff]
# Global formatter settings; line-length here, linter rules moved under lint.*
line-length = 150
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]  # allow black-style slicing if you enable black later

[tool.ruff.lint.per-file-ignores]
# Allow test files to have relaxed import ordering, line length, and unused imports
"tests/**" = ["E402", "I001", "F401", "E501"]
# Allow legacy wrapper to import after code and keep existing structure
"mJiraWorkLogExtractor.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
